--- a/new.html
+++ b/new.html
@@ -6,7 +6,7 @@
     <title>new</title>
 </head>
 <body>
-    <H1>Welcome to my website</H1>
+    <H1 style="color:blue">Welcome to my website</H1>
     <H2>hello world</H2>
     Hello, world!
 </body>
