--- a/new.html
+++ b/new.html
@@ -6,7 +6,7 @@
     <title>new</title>
 </head>
 <body>
-    <H1>Welcome to my website!!</H1>
+    <H1>Welcome to my website!</H1>
     <h2>Hello, world!</h2>
 </body>
 </html>
